@@ -3,23 +3,25 @@ Hash: SHA256
 
 AUX SaltTesting-0.5.2-silence-DepricationWarning.patch 703 SHA256 ad9bde383cc4feac1fc3e5b3bff21ee0c66937b0c62f4222d90c0f217b450361 SHA512 492d0a7812a577453c26a0c323c6f797f4fe2d17e24c6cf2711cdb72fe1770f265a142cc7639cb86f685d89a24d47cdf50d8a2e673c57163d294a18dbf8bc6fb WHIRLPOOL 02c0d18c6a3beda5ff5deb572b8df325b98a35073e9a7b91952d8238d3c87e6bb23abbdd5c2f79baa00e0cdfd2a962aa45fe9a5622e7e2afd424441d49f5892b
 DIST SaltTesting-0.5.2.tar.gz 29488 SHA256 e4f748762c8154be6049a919b01a9d8e65b4ebd68b98db538a73f32305749c02 SHA512 b8667c50b1db3b780f531b4f08ef3d02f66a970ad861f51ae1021da9684ae3da110d0aa0d80b70df05a64bba9eae220fdfd63a8b2fa0d4be932525e8167fcce5 WHIRLPOOL f4af18bc717518e33acb02fe48af23cdb32f4fcfeaee027b118a08f218f3e531bd1d2775c65ce265676723d4cf03df6914dbdc6ecb049ead674cac3693d39219
+DIST SaltTesting-0.5.3.tar.gz 25956 SHA256 6b3a7d57e1ee64c4b6e38b01cab8cc0219a9d55f4d7f127480911a2593b0246e SHA512 7824432e6635d94267bcd20a304968c642e21ef9465c7528c02eb752a51b79290d8a7cbdbef0cc46a6dbc377399f894a6abb542d8e33f7bb6052bba7dd3e135c WHIRLPOOL 5d3cc9c7a81b8b3b02bed139d9bd31c01134e079e40a95675462868cb027cb171a19737323f286112e8a998d305b1435a9fc781230c3acf74358f80391ba2ae7
 EBUILD SaltTesting-0.5.2.ebuild 749 SHA256 3eae9443b6c0371e89f3a499c0e1e187e019c737d0b132064f1db30f21d547c5 SHA512 50b1b9fceeef5e2a120ecb530d9dba5b1b71b8d7101fa88bd0a860a2c0a74ce1acab9106a6ceb0916ee87cb52c929ba2a353198d1f54d45e1ee06820382ba496 WHIRLPOOL 877a65082a1c7510e4fedc231a414e387e1a000d78889888aad616248186afdce8668a7dd159c0bcaffb5dec4cfd0c9910d3fbd869089a832b82d26c7e0ce18b
-MISC ChangeLog 495 SHA256 6d71fc464163b9594d003fc5c8776ae933bb444a3c7ced6ff26bb0076b7413d2 SHA512 75f908d73386043f7a528007a1deaba84aa3cfed681ff8df4fe6d56a30563e345ea1fe880e6d8fe9c65a78cacc13e8c2522d8d6859b57b2258d8378bc3eed459 WHIRLPOOL db84af73316f9dac761ffafbc5a6e0e471669d56ecdaeb2d1f55ff0c616484901ecf0805ea4ec892b1707d9e518bf921ed17bd04d4c5e612db40df2dbc8b00a9
+EBUILD SaltTesting-0.5.3.ebuild 686 SHA256 01645ff51a5efd2a9702117cce93f9be5c809d5780c6db1d056acfa8eaeacc74 SHA512 8750a4c51ce23d8fb8b938a0c6e383f9806b66640847846af22e882ec3d3b3c01ac765bb5a4417d5827e393341910d22ea5cf5e18f0c9179da9a4b71779a5079 WHIRLPOOL e7f9b11adb4494e1eadd509d2354f0b9f3d4add0616a6c1b4b2fdf90b17d3018cd1ee7e45b63506fd934a3fabfe68d44c7d0d25e7d9c8f94278793cf70323ced
+MISC ChangeLog 625 SHA256 3e00a1f4b9406ff177358cdf2878396c9f93a74f43bae779be8aef88d5f72500 SHA512 93c510f9f63e75e6b8a3dbc298c4e8acebcd4bf8cc94a6b3170e27c1884ab94febcb567e5dbb378237c7e5ec2ce239b229f2917cbf47b6fabaebe30de39253f1 WHIRLPOOL d87d5436c013e073223fd1ba80836da7c08e8d18c148885a099e53788ba43aa45aad9c22fe61472ebb972f9b4a5ace28e72a2a6577eef7f0f8600daf13a32da5
 MISC metadata.xml 256 SHA256 e48724b71a7b3ef7bba322584f7999599091759342614c0b4abc05beedb2b477 SHA512 29e3df963ba78eb59e41407ff49b099390f083f46c482028b5ced63de90049f869d58fa053ac8f87d7c781ac9c2f89b683b1d18b6ec4b1464e66946c8f57eecc WHIRLPOOL 1e073089127b7757a14535d9de94e54e2e37004f0e3e1e2ba70f92c14a21093683f046d6a7764383dcbae4f4b75b1ae3a35d171a6430a69b2a5458d8d8fc3069
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSgnokAAoJEHy/RO9cNQiDRLUP/0mNFS2zYosbWvL4dKEYHYEz
-7UO2LNqaiQDRAvMBwoBRocxfrlknNrXQT+hdXXpQKy/7cN/oNth2H7UvKQSgF67x
-58Poy7JkJwxTMUGr0nxwE6Dob+KdoWtI7jaATpFnh/S3bkRB2bJd03/k0efHW9a9
-DhyIGB+b9IggFfpP/GDtwWC83HIaS7GnjEeATdx7uSgOr4RlYnQ3nC9+b+XT0+i9
-NBMGYsdGw4IYC8qMOJ6FF4HMIKVNaJKPrA9BGFQX+vcc32bj89qddYSuVvMs+CBu
-SqzWHlR+j21Ai3s9oUhC3I7sGPqO6cc6gFZC58ehjMT9tlKA+DCj6oEXS8l8SLqJ
-5Y1L6/mAIz1+RfanfjGU9NawpXzgsxtHLprN19LIf1TVtbtA4U3MypstT5YI5Gsu
-XtZBk6PnEiPPFogKnHgDkaoAgQmXJcq5OosIzg0cl0pKcJ1OEgYqHbdC1m7td2oE
-5AbL8dtl2weobqMHJYhvmSdW16z08QTYwtZhx3xPTkNK5ani467qtN0lRUBrqxGN
-OQKGKt/PPXyiFx262Jy1Y1E/8h4np1SfF355SfaTfkP2+GeU11vgIPhcbTSpoydH
-Mk0GB1U+H0/NjWgm1MqbqyhgcS77hfnFQwgDuD1RKHG/MWGEa1wzelqrzcO6F4RM
-VfrFsvL/CIXCJERyU0FI
-=ooyx
+iQIcBAEBCAAGBQJTDnaXAAoJEHy/RO9cNQiD8/QQAMhv2VxJGlRzbZ6xQXIBvGvi
+wIdYpXLNuaucNPp98cnD5+l3CLYEGZR1GqytSc3XMl8xReH5bV65+D2AYa2zGfsd
+zliJfQChGhFncKK38fN6gPKSlBGnLZx1KESo0PTbQy88OwwwniQj8iEhwPekoOwD
+7cMd7Efn4xuAGG006P8yl1N4QfS+FfTLLjJil6JQfpQj7CwE2QnlF76vwvqYeTzs
+tXLbJ2UUX8/ILERLdhj8tTweRvTZJYRuiOs/trKgabw3/Y/YmhxzJ+RVqZFKN7cY
+3dMuMPZEjJWmDCl8IyHgXdk/fwNAEov/iinqVX552EznYDgeHn/toAAZvgCoALIh
+Zo7ArfmzdthFwb0sqXsEprPjBnmmtBXkXPGQbYe/M+W2WRlyDtOflqQTGPjDo44v
+yjKeG9Z7sB4ahiIH4faHG6S6FfrHIVDUTEqgRL2rje5MCbihkCDpLWOM0dAS2UnR
+MVoE21kz7+Pugd/x/A4/Ep+Ucq/KK7fll3zZA2wwK88Aq0R8cqRLmcJf7RoDG+2p
+lSejhsq4iRn3CeIOvWNTX5XqvjBvaRktvgAIaVu4geeqlEhofZz+2HBxaDkjD9+Q
+pPzbKyXm16dIU24UtGbj1IwFxRBmcAhS2E3IwPC0pd4jhbWQY6JRJvfWcWOdmbNv
+ECXkHs/8cfHC+Q0Ikxv0
+=mVq2
 -----END PGP SIGNATURE-----
