@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/SaltTesting
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/SaltTesting/ChangeLog,v 1.1 2013/11/12 18:57:29 chutzpah Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/SaltTesting/ChangeLog,v 1.2 2014/02/26 23:19:50 chutzpah Exp $
+
+*SaltTesting-0.5.3 (26 Feb 2014)
+
+  26 Feb 2014; Patrick McLean <chutzpah@gentoo.org> +SaltTesting-0.5.3.ebuild:
+  Version bump.
 
 *SaltTesting-0.5.2 (12 Nov 2013)
 
